--- a/Portfolio/Portfolio/Base.lproj/Main.storyboard
+++ b/Portfolio/Portfolio/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R4J-G8-atg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OLj-H4-jt0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Post View Controller-->
+        <!--Posts View Controller-->
         <scene sceneID="98O-aS-vdh">
             <objects>
-                <viewController storyboardIdentifier="MainViewController" id="bft-GR-xOg" customClass="PostViewController" customModule="Portfolio" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bft-GR-xOg" customClass="PostsViewController" customModule="Portfolio" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VDd-Y9-NKZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,30 +78,42 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMt-dP-JuV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3903" y="-882"/>
+            <point key="canvasLocation" x="1457" y="-841"/>
         </scene>
-        <!--News Feed View Controller-->
+        <!--NewsFeedViewController-->
         <scene sceneID="XPC-Xl-dhG">
             <objects>
-                <viewController id="RAh-RI-i8c" customClass="NewsFeedViewController" customModule="Portfolio" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="NewsFeedViewController" id="RAh-RI-i8c" customClass="NewsFeedViewController" customModule="Portfolio" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BOX-Cj-Uw3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qNT-6z-njh">
-                                <rect key="frame" x="16" y="424" width="343" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s37-If-sEQ">
+                                <rect key="frame" x="16" y="101" width="343" height="214"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="214" id="9Hg-8x-Q5A"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Placeholder" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qNT-6z-njh">
+                                <rect key="frame" x="16" y="323" width="343" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" notEnabled="YES"/>
+                                </accessibility>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s37-If-sEQ">
-                                <rect key="frame" x="16" y="101" width="343" height="214"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gCa-gO-BPJ" firstAttribute="trailing" secondItem="s37-If-sEQ" secondAttribute="trailing" constant="16" id="EuX-he-F44"/>
+                            <constraint firstItem="s37-If-sEQ" firstAttribute="leading" secondItem="gCa-gO-BPJ" secondAttribute="leading" constant="16" id="Q1N-S4-MdC"/>
+                            <constraint firstItem="s37-If-sEQ" firstAttribute="trailing" secondItem="qNT-6z-njh" secondAttribute="trailing" id="QXx-Zn-Ess"/>
+                            <constraint firstItem="s37-If-sEQ" firstAttribute="leading" secondItem="qNT-6z-njh" secondAttribute="leading" id="Sa4-di-Xlq"/>
+                            <constraint firstItem="gCa-gO-BPJ" firstAttribute="bottom" secondItem="qNT-6z-njh" secondAttribute="bottom" constant="216" id="nMF-TP-tqd"/>
+                            <constraint firstItem="qNT-6z-njh" firstAttribute="top" secondItem="s37-If-sEQ" secondAttribute="bottom" constant="8" symbolic="YES" id="nOE-Yp-P0V"/>
+                            <constraint firstItem="s37-If-sEQ" firstAttribute="top" secondItem="gCa-gO-BPJ" secondAttribute="top" constant="37" id="uu1-eo-YD5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gCa-gO-BPJ"/>
                     </view>
                     <navigationItem key="navigationItem" id="xwH-XZ-9gV">
@@ -118,7 +130,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wpm-6r-3kr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2932" y="-882.00899550224892"/>
+            <point key="canvasLocation" x="487" y="-841"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -201,7 +213,7 @@
         <!--Navigation Controller-->
         <scene sceneID="ZFt-2y-WTY">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R4J-G8-atg" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavigationController" automaticallyAdjustsScrollViewInsets="NO" id="R4J-G8-atg" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jDI-dN-FfT">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -214,7 +226,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="anj-r3-gf3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1992.8" y="-882.00899550224892"/>
+            <point key="canvasLocation" x="-508" y="-842"/>
         </scene>
     </scenes>
 </document>
